blackroad-sf/force-app/main/default/objects/StripeRecord__c/StripeRecord__c.object-meta.xml
<CustomObject>
    <label>Stripe Record</label>
    <pluralLabel>Stripe Records</pluralLabel>
    <nameField><label>Stripe ID</label><type>Text</type></nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>