blackroad-sf/force-app/main/default/objects/StripeRecord__c/fields/InvoiceUrl__c.field-meta.xml
<CustomField>
    <fullName>InvoiceUrl__c</fullName>
    <label>Invoice URL</label>
    <type>Url</type>
</CustomField>