blackroad-sf/force-app/main/default/objects/StripeRecord__c/fields/LiveMode__c.field-meta.xml
<CustomField>
    <fullName>LiveMode__c</fullName>
    <label>Live Mode</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>