blackroad-sf/force-app/main/default/objects/StripeRecord__c/fields/PayoutAt__c.field-meta.xml
<CustomField>
    <fullName>PayoutAt__c</fullName>
    <label>Payout Date</label>
    <type>DateTime</type>
</CustomField>