blackroad-sf/force-app/main/default/objects/StripeRecord__c/fields/PeriodEnd__c.field-meta.xml
<CustomField>
    <fullName>PeriodEnd__c</fullName>
    <label>Period End</label>
    <type>DateTime</type>
</CustomField>