blackroad-sf/force-app/main/default/objects/StripeRecord__c/fields/PeriodStart__c.field-meta.xml
<CustomField>
    <fullName>PeriodStart__c</fullName>
    <label>Period Start</label>
    <type>DateTime</type>
</CustomField>