blackroad-sf/force-app/main/default/objects/StripeRecord__c/fields/ProductName__c.field-meta.xml
<CustomField>
    <fullName>ProductName__c</fullName>
    <label>Product / Plan</label>
    <type>Text</type>
    <length>255</length>
</CustomField>