blackroad-sf/force-app/main/default/objects/StripeRecord__c/fields/RecordType__c.field-meta.xml
<CustomField>
    <fullName>RecordType__c</fullName>
    <label>Record Type</label>
    <type>Text</type>
    <length>80</length>
</CustomField>