blackroad-sf/force-app/main/default/objects/StripeRecord__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Text</type>
    <length>80</length>
</CustomField>