blackroad-sf/force-app/main/default/objects/StripeRecord__c/fields/StripeId__c.field-meta.xml
<CustomField>
    <fullName>StripeId__c</fullName>
    <label>Stripe ID</label>
    <type>Text</type>
    <length>255</length>
    <externalId>true</externalId>
    <unique>true</unique>
</CustomField>